@@ -57,7 +57,7 @@
 #[1](0.96017)
 #[1](0.96017)
 #[1](-0.279415)
-#[1](-0.279415)
+#[1](-0.279416)
 #Check gradient at x = -5
 # Good
 #[1](-10)
@@ -81,7 +81,7 @@
 #[1](-0.653644)
 #[1](-0.653644)
 #[1](-0.756802)
-#[1](-0.756802)
+#[1](-0.756803)
 #Check gradient at x = -3
 # Good
 #[1](-6)
@@ -91,7 +91,7 @@
 #[1](-6)
 # Circle
 #[1](-0.989992)
-#[1](-0.989992)
+#[1](-0.989993)
 #[1](0.14112)
 #[1](0.14112)
 #Check gradient at x = -2
@@ -121,10 +121,10 @@
 #Check gradient at x = 0
 # Good
 #[1](0)
-#[1](1e-08)
+#[1](0)
 # Bad
 #[1](42)
-#[1](1e-08)
+#[1](0)
 # Circle
 #[1](1)
 #[1](1)
@@ -163,7 +163,7 @@
 #[1](6)
 # Circle
 #[1](-0.989992)
-#[1](-0.989992)
+#[1](-0.989993)
 #[1](-0.14112)
 #[1](-0.14112)
 #Check gradient at x = 4
@@ -177,7 +177,7 @@
 #[1](-0.653644)
 #[1](-0.653644)
 #[1](0.756802)
-#[1](0.756802)
+#[1](0.756803)
 #Check gradient at x = 5
 # Good
 #[1](10)
