@@ -1,5 +1,12 @@
 2009-07-28  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Enhance finite difference computation.
+	* src/finite-difference-gradient.cc: Import better
+	algorithm from GSL.
+	* tests/finite-difference-gradient.stdout: Regenerate.
+
+2009-07-28  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Compute in double precision.
 	* src/numeric-linear-function.cc,
 	* src/numeric-quadratic-function.cc: compute numeric
